# yandex-lavka-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  glama.json  pyproject.toml  server.json
docs/superpowers/specs/: 2026-07-19-yandex-lavka-mcp-design.md
scripts/: extract_chrome_cookies.py  import_cookies.py  smoke.py
src/yandex_lavka_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  endpoints.py  errors.py  server.py
tests/: test_auth.py  test_checkout_guard.py  test_client_http.py  test_trimming.py
