[project]
name = "yandex-lavka-mcp"
version = "0.1.0"
description = "Unofficial MCP server for Yandex Lavka: search, cart, and place grocery orders from an AI assistant."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "yandex", "lavka", "grocery", "llm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
yandex-lavka-mcp = "yandex_lavka_mcp.__main__:main"

[project.optional-dependencies]
browser = [
    "cryptography>=42.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_lavka_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
